--- a/style.css
+++ b/style.css
@@ -1,44 +1,161 @@
+@import url('https://fonts.googleapis.com/css2?family=Kablammo&family=Rubik+Moonrocks&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kablammo&family=Rubik+Moonrocks&family=WDXL+Lubrifont+JP+N&display=swap');
 *{
     margin : 0;
     padding: 0;
-}
-html, body{
-    height: 100%;
+    box-sizing: border-box;
 }
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 100vh;
+    background: linear-gradient(45deg, #14222e, #2c3c2e);
+    color: #eaeaea;
+}
+*.hidden{
+    display: none !important;
+}
+.container{
+    position: relative;
+    display: inline-block;
+    padding: 32px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: linear-gradient(45deg, transparent 50%, rgba(255, 255, 255, 0.08));
+    background-color: #223140;
+    text-align: center;
+    border-radius: 24px;
+}
+.load-widget{
+    width: 360px;
+    height: 420px;
+}
+.load{
+    position: relative;
+    display: inline-block;
+    height: 240px;
+    width: 240px;
+    border-radius: 50%;
+    background: conic-gradient(rgba(1, 182, 190, 0.3) 0%, transparent 65%);
+    animation: radarRotate 2s linear infinite;
+}
+@keyframes radarRotate {
+    100% {transform:rotate(-360deg);} 
+}
+.load:before{
+    content: '';
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: 0;
+    left: calc(50% - 8px);
+    border: 8px solid transparent;
+    border-top: 120px solid #81ecec;
+    filter: drop-shadow(0 0 12px #01B6be);
+}
+.load-widget h1{
+    font-family: "Rubik Moonrocks", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1.3;
+    margin-bottom: 32px;
+    color: #aaffff;
+    text-shadow: 0 0 8px #81ecec;
+}
+.kablammo{
+  font-family: "Kablammo", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "MORF" 0;
+    text-align: center;
+}
+.load-content{
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-button{
-    border: none;
-    outline: none;
-    padding: 1em;
-    border-radius: 2px;
-    background-color: rgb(100, 143, 218);
-    color: white;
+.load-content button{
+    position: relative;
+    cursor: pointer;
+    font-family: "WDXL Lubrifont JP N", sans-serif;
+    font-size: 23px;
     font-weight: bold;
-    text-transform: uppercase;
+    font-style: normal;
+    height: 240px;
+    width: 240px;
+    line-height: 1.5;
+    border-radius: 50%;
+    background-color: #223140;
+    color: #eaeaea;
+    border: none;
+    box-shadow: 0 0 12px #81ecec;
 }
-.progress{
-    height: 10px;
-    width: 300px;
-    background-color: rgba(189, 174, 174, 0.647);
-    margin-bottom: 30px;
-    border-radius: 5px;
+.load-content.result button{
+    height: 120px;
+    width: 120px;
+    margin-top: 10px;
 }
-.progress .prog{
+.load-content button:hover{
+    background-color: #1f3c4e;
+}
+.load-content button:before{
+    content: '';
+    position: absolute;
     height: 100%;
-    width: 0%;
-    border-radius: 5px;
-    background-color: rgb(100, 143, 218);
-    box-shadow: 0px 6px 10px rgb(143, 162, 199);
-    transition: width 0.15s;
-}.speed-test{
-    font-size: 2em;
-    font-weight: bolder;
-    color: rgb(100, 143, 218);
+    width: 100%;
+    top: -2px;
+    left: -2px;
+    border: 2px solid #7ed6d4;
+    border-radius: 50%;
+    animation: btnRing 2s linear infinite;
+}
+@keyframes btnRing {
+    60%, 100%{
+        height: calc(100% + 60px);
+        width: calc(100% + 60px);
+        top: -32px;
+        left: -32px;
+        opacity: 0;
+    }
+}
+.load-content button:after{
+    content: '';
+    position: absolute;
+    height: calc(100% + 4px);
+    width: calc(100% + 4px);
+    top: -2px;
+    left: -2px;
+    background: linear-gradient(45deg, #540b36, #064850);
+    z-index: -1;
+    border-radius: 50%;
+}
+.content{
+    display: flex;
+    width: 100%;
+    font-size: 64px;
+    margin: 12px 0 32px 0;
+    flex-direction: column;
+    font-family: "WDXL Lubrifont JP N", sans-serif;
+}
+.content small{
+    font-size: 40%;
+}
+.progress-bar{
+    width: 100%;
+    height: 12px;
+    background: #444;
+    border-radius: 6px;
+    overflow: hidden;
     margin-bottom: 10px;
+    margin-top: 15px;
+
+}
+.progress-bar .bar{
+    width: 0%;
+    height: 100%;
+    background: 100%;
+    background: linear-gradient(90deg, #81ecec, #01B6be);
+    transition: width 0.2s ease-out;
 }
